I believe I am done! Friend check before submission

--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.responsiveText {
+    @apply lg:text-base md:text-sm sm:text-[.8rem];
+}
