--- a/src/app.css
+++ b/src/app.css
@@ -3,5 +3,9 @@
 @tailwind utilities;
 
 .responsiveText {
-    @apply lg:text-base md:text-sm sm:text-[.8rem];
+    @apply lg:text-base md:text-[.9rem] sm:text-[.75rem]; 
+}
+
+.navUnderline {
+    @apply sm:border-collapse md:border-solid md:border-b-2 md:border-gray-two sm:border-b-0;
 }
